--- a/福利姬频道总目录/Arty亚缇全集/menu.html
+++ b/福利姬频道总目录/Arty亚缇全集/menu.html
@@ -22,5 +22,8 @@
   <p><a href="https://telegra.ph/Arty亜提---Artoria-33P-78MB-08-26">Arty亜提 - Artoria [33P 78MB]</a></p>
   <p><a href="https://telegra.ph/l-Arty-YaeMiko-08-26">l-Arty_YaeMiko</a></p>
   <p><a href="https://telegra.ph/Arty-Huang---Hinata-08-26">Arty Huang - Hinata</a></p>
+  <p><a href="https://telegra.ph/Arty亚缇---REM-bunny-suit-ver-Re-Zero-08-26">Arty亚缇 - REM bunny suit ver. (Re_Zero)</a></p>
+  <p><a href="https://telegra.ph/Coser萱-KaYa---亚缇-黑呆睡衣爱丽丝写真-08-26">Coser萱-KaYa - 亚缇 黑呆睡衣爱丽丝写真</a></p>
+
 </body>
 </html>
