--- a/福利姬频道总目录/Nyako喵子全集/menu.html
+++ b/福利姬频道总目录/Nyako喵子全集/menu.html
@@ -56,5 +56,6 @@
   <p><a href="https://telegra.ph/粉色竞泳-46P-245MB-08-25">喵子Nyako 粉色竞泳 [46P-245MB]</a></p>
   <p><a href="https://telegra.ph/黑色透明竞泳-88P-463MB-08-25">喵子Nyako 黑色透明竞泳 [88P-463MB]</a></p>
   <p><a href="https://telegra.ph/粉色高叉竞泳-84P-341MB-08-25">喵子Nyako 粉色高叉竞泳 [84P-341MB]</a></p>
+  <p><a href="https://telegra.ph/VOL32隣のやばいお姉さん-背心78p1v-732M-08-25">Nyako喵子 VOL.32《隣のやばいお姉さん》-背心[78p1v-732M]</a></p>
 </body>
 </html>
