--- a/福利姬频道总目录/一北亦北(亦南南南)全集/menu.html
+++ b/福利姬频道总目录/一北亦北(亦南南南)全集/menu.html
@@ -18,13 +18,39 @@
   <p><a href="https://telegra.ph/亦南南南-大蛇姬20P-151MB-08-25">亦南南南 大蛇姬[20P-151MB]</a></p>
   <p><a href="https://telegra.ph/亦南南南-小乖40p10月6打赏群资源-08-25">亦南南南 小乖40p（10月6打赏群资源）</a></p>
   <p><a href="https://telegra.ph/亦南南南-初秋20P10月6打赏群资源-08-25">亦南南南 初秋20P（10月6打赏群资源）</a></p>
-  <p><a href="https://telegra.ph/亦南南南---吉他妹妹6月30会员资源cosplay写真NSFW频道-httpstmedouza-08-25">亦南南南 - 吉他妹妹（6月30会员资源）cosplay写真[NSFW]频道 https://t.me/douza</a></p>
+  <p><a href="https://telegra.ph/亦南南南---吉他妹妹-08-26">亦南南南 - 吉他妹妹 </a></p>
   <p><a href="https://telegra.ph/亦南南南-洛可可时代-束身衣版-08-25">亦南南南 洛可可时代 束身衣版</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---洛可可时代-08-26">一北亦北 - 洛可可时代</a></p>
   <p><a href="https://telegra.ph/亦南南南---天命之子玉藻前-08-25">亦南南南 - 天命之子玉藻前</a></p>
   <p><a href="https://telegra.ph/一北亦北-白裙私房-20P-202MB-08-26">一北亦北 白裙私房 【20P-202MB】</a></p>
   <p><a href="https://telegra.ph/一北亦北---NO17-寒烟烟烟-侍神令-47P-742MB-08-26">一北亦北 - NO.17 &寒烟烟烟 侍神令 [47P-742MB]</a></p>
   <p><a href="https://telegra.ph/一北亦北---NO16-人妻妻子-44P7V-27MB-08-26">一北亦北 - NO.16 人妻妻子 [44P7V-27MB]</a></p>
   <p><a href="https://telegra.ph/一北亦北---NO17-奶光新春旗袍-42P1V-540MB-08-26">一北亦北 - NO.17 奶光新春旗袍 [42P1V-540MB]</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---吉他妹妹-08-26">一北亦北 - 吉他妹妹</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---暗蔷摇曳-08-26">一北亦北 - 暗蔷摇曳</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---初秋-08-26">一北亦北 - 初秋</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---小乖-08-26">一北亦北 - 小乖</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---白虎兽娘福瑞-08-26">一北亦北 - 白虎兽娘福瑞</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---大蛇姬-08-26">一北亦北 - 大蛇姬</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---天命之子-玉藻前原皮-08-26">一北亦北 - 天命之子 玉藻前原皮</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---爱者-08-26">一北亦北 - 爱者</a></p>
+  <p><a href="https://telegra.ph/网红COS-一北亦北---人妻太太-08-26">一北亦北 - 人妻太太</a></p>
+  <p><a href="https://telegra.ph/网红COS-一北亦北---奶光旗袍-08-26-2">一北亦北 - 奶光旗袍</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北--八尺夫人---是一只熊仔-08-26">一北亦北 & 八尺夫人 - 是一只熊仔</a></p>
+  <p><a href="https://telegra.ph/福利COS-一北亦北---赫克特-08-26-2">一北亦北 - 赫克特</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---2B冰雪同人-08-26">一北亦北 - 2B冰雪同人</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---和服泳装-08-26-2">一北亦北 - 和服泳装</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---恰巴耶夫囚服-08-26-2">一北亦北 - 恰巴耶夫囚服</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---斯卡哈同人女仆-08-26">一北亦北 - 斯卡哈同人女仆</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---杀生院泳装-08-26">一北亦北 - 杀生院泳装</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---玛修同人服-08-26">一北亦北 - 玛修同人服</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---信浓礼服-08-26">一北亦北 - 信浓礼服</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---玛修-08-26">一北亦北 - 玛修</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---阿努比斯-08-26">一北亦北 - 阿努比斯</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---花精灵-08-26">一北亦北 - 花精灵</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---路易九世礼服-08-26">一北亦北 - 路易九世礼服</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---2B旗袍自拍-08-26">一北亦北 - 2B旗袍自拍</a></p>
+  <p><a href="https://telegra.ph/网红COSER写真-一北亦北---黑丝眼镜娘-08-26">一北亦北 - 黑丝眼镜娘</a></p>
 
 </body>
 </html>
