--- a/福利姬频道总目录/兔胖胖min全集/menu.html
+++ b/福利姬频道总目录/兔胖胖min全集/menu.html
@@ -11,9 +11,7 @@
   <hr>
  
   <p><a href="https://telegra.ph/%E5%85%94%E8%83%96%E8%83%96min-%E8%B7%AF%E6%98%93%E4%B9%9D%E4%B8%96%E7%A4%BC%E6%9C%8D-37P-177MB-08-23">兔胖胖min 路易九世礼服 [37P-177MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/兔胖胖min---里诺兔女郎-08-26">兔胖胖min - 里诺兔女郎</a></p>
+  <p><a href="https://telegra.ph/兔胖胖min---百合黑白兔女郎-20P-155MB-08-25">兔胖胖min - 百合黑白兔女郎 [20P-155MB]</a></p>
 </body>
 </html>
