--- a/福利姬频道总目录/[憂貴ちゃんに貢ぐ会(憂貴)]全集/menu.html
+++ b/福利姬频道总目录/[憂貴ちゃんに貢ぐ会(憂貴)]全集/menu.html
@@ -14,6 +14,9 @@
   <p><a href="https://telegra.ph/憂貴ちゃんに貢ぐ会憂貴僕のペットはむちむちJK-08-26">[憂貴ちゃんに貢ぐ会(憂貴)]僕のペットはむちむちJK</a></p>
   <p><a href="https://telegra.ph/憂貴ちゃんに貢ぐ会憂貴裏レンタル憂貴ちゃん-08-26">[憂貴ちゃんに貢ぐ会(憂貴)]裏レンタル憂貴ちゃん</a></p>
   <p><a href="https://telegra.ph/憂貴ちゃんに貢ぐ会憂貴Hカッフたけと女児服着てる-08-26">[憂貴ちゃんに貢ぐ会(憂貴)]Hカップだけど女児服着てる</a></p>
+  <p><a href="https://telegra.ph/憂貴ちゃんに貢ぐ会憂貴-Fantia-2023年7月---1-08-26">憂貴ちゃんに貢ぐ会(憂貴) [Fantia] 2023年7月 - 1</a></p>
+  <p><a href="https://telegra.ph/憂貴ちゃんに貢ぐ会憂貴-Fantia-2023年7月---2-08-26">憂貴ちゃんに貢ぐ会(憂貴) [Fantia] 2023年7月 - 2</a></p>
+  <p><a href="https://telegra.ph/憂貴ちゃんに貢ぐ会憂貴-Fantia-2023年7月---3-08-26">憂貴ちゃんに貢ぐ会(憂貴) [Fantia] 2023年7月 - 3</a></p>
 
 </body>
 </html>
