--- a/福利姬频道总目录/神沢永莉全集/menu.html
+++ b/福利姬频道总目录/神沢永莉全集/menu.html
@@ -29,7 +29,11 @@
   <p><a href="https://telegra.ph/神沢永莉---粉色格子裙19P-163M-08-25">神沢永莉 - 粉色格子裙[19P 163M]</a></p>
   <p><a href="https://telegra.ph/神沢永莉---灰丝花裙子-26P-218MB-08-25">神沢永莉 - 灰丝花裙子 [26P 218MB]</a></p>
   <p><a href="https://telegra.ph/神沢永莉---毛衣牛仔裙吊带黑丝-22P-162MB-08-25">神沢永莉 - 毛衣牛仔裙吊带黑丝 [22P 162MB]</a></p>
-  <p><a href="https://telegra.ph/神沢永莉-魅魔利兹8月27会员资源cosplay写真NSFW频道-httpstmedouza-08-25">神沢永莉 魅魔利兹（8月27会员资源）cosplay写真[NSFW]频道 https://t.me/douza</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/神沢永莉---蕾姆和风-08-26">神沢永莉 - 蕾姆和风</a></p>
+  <p><a href="https://telegra.ph/神沢永莉---黄色吊带睡衣兔兔-08-26">神沢永莉 - 黄色吊带睡衣兔兔</a></p>
+  <p><a href="https://telegra.ph/神沢永莉---家庭作业-08-26">神沢永莉 - 家庭作业</a></p>
+  <p><a href="https://telegra.ph/神沢永莉---魅魔利兹-08-26">神沢永莉 - 魅魔利兹</a></p>
+  <p><a href="https://telegra.ph/神沢永莉---双马尾黑丝班主任-08-26">神沢永莉 - 双马尾黑丝班主任</a></p>
+
 </body>
 </html>
