--- a/福利姬频道总目录/Asagiriai（愛ちゃん）全集/menu.html
+++ b/福利姬频道总目录/Asagiriai（愛ちゃん）全集/menu.html
@@ -6,9 +6,10 @@
 <body>
   <div id="advertise">
     <iframe src="../../advertise.html" frameborder="0" width="100%" height="100"></iframe>
+    <p><a href="../index.html">返回当前频道总目录</a></p>
   </div>
   <hr>
-  <p><a href="../index.html">返回总目录</a></p>
+  
   <p><a href="https://telegra.ph/Asagiriai%E6%84%9B%E3%81%A1%E3%82%83%E3%82%93-%E7%A2%A7%E8%93%9D%E6%A1%A3%E6%A1%88Iochi-Mar%C4%AB-36P-335M-08-23">Asagiriai（愛ちゃん） 碧蓝档案Iochi Marī [36P-335M]</a></p>
   <p><a href="https://telegra.ph/Asagiriai%E6%84%9B%E3%81%A1%E3%82%83%E3%82%93%E5%8E%9F%E7%A5%9EYae-Miko-35P-465MB-08-23">Asagiriai（愛ちゃん）原神Yae Miko [35P-465MB]</a></p>
   <p><a href="https://telegra.ph/Asagiriai%E6%84%9B%E3%81%A1%E3%82%83%E3%82%93%E7%BA%B3%E8%A5%BF%E5%A6%B2-37P-409MB-%E5%8E%9F%E7%A5%9E-08-23">Asagiriai（愛ちゃん）纳西妲 [37P-409MB] (原神)</a></p>
@@ -16,12 +17,6 @@
   <p><a href="https://telegra.ph/Asagiriai%E6%84%9B%E3%81%A1%E3%82%83%E3%82%93%E9%A3%9B%E9%B3%A5%E9%A6%AC%E6%99%82-46P-683MB-08-23">Asagiriai（愛ちゃん）飛鳥馬時 [46P-683MB]</a></p>
   <p><a href="https://telegra.ph/Asagiriai%E6%84%9B%E3%81%A1%E3%82%83%E3%82%93-%E7%8F%8A%E7%91%9A%E5%AE%AB%E5%BF%83%E6%B5%B7-34P-406MB-%E5%8E%9F%E7%A5%9E-08-23">Asagiriai（愛ちゃん） 珊瑚宫心海 [34P-406MB] (原神)</a></p>
   <p><a href="https://telegra.ph/Asagiriai%E6%84%9B%E3%81%A1%E3%82%83%E3%82%93-%E7%88%B1%E8%8E%89%E5%B8%8C%E9%9B%85-33P-352MB-08-23">Asagiriai（愛ちゃん） 爱莉希雅 [33P-352MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Asagiriai-愛ちゃん---納西妲-08-26">Asagiriai 愛ちゃん - 納西妲 (原神)</a></p>
 </body>
 </html>
