--- a/福利姬频道总目录/Bambi밤비全集/menu.html
+++ b/福利姬频道总目录/Bambi밤비全集/menu.html
@@ -45,5 +45,18 @@
   <p><a href="https://telegra.ph/BamBi밤비---NO71-Digital-photobook---Night-Rain-100P-347MB-08-26">BamBi밤비 - NO.71 Digital photobook - Night Rain [100P-347MB]</a></p>
   <p><a href="https://telegra.ph/Sonson-BamBi밤비-Maid-Mansion-W-153P113G-08-26">Sonson &BamBi밤비 Maid Mansion W [153P1.13G]</a></p>
   <p><a href="https://telegra.ph/BamBi밤비---NO70-DJAWA-Succubus-2B-119P-204G-08-26">BamBi밤비 - NO.70 [DJAWA] Succubus 2B [119P-2.04G]</a></p> 
+  <p><a href="https://telegra.ph/BLUECAKE-Bambi---Hancock-08-26">Bambi - Hancock</a></p>
+  <p><a href="https://telegra.ph/LOOZY-Bambi---S-Bambi-08-26">[LOOZY]  Bambi - S-Bambi</a></p>
+  <p><a href="https://telegra.ph/BLUECAKE-Bambi---Insanity-Of-Obsession-08-26">Bambi - Insanity Of Obsession</a></p>
+  <p><a href="https://telegra.ph/BLUECAKE-Bambi---Home-Work-08-26">Bambi - Home Work</a></p>
+  <p><a href="https://telegra.ph/BLUECAKE-Bambi---Doki-DokiAmenokade-08-26">Bambi - Doki Doki，Amenokade</a></p>
+  <p><a href="https://telegra.ph/BLUECAKE-Bambi---Autumn-08-26">Bambi - Autumn</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Bambi-The-Tale-of-The-Nine-Tailed-Fox-08-26">DJAWA] Bambi The Tale of The Nine Tailed Fox</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Bambi-Bunny-adore-qipao-08-26">DJAWA] Bambi Bunny adore qipao</a></p>
+  <p><a href="https://telegra.ph/BLUECAKE-Bambi---Black-Mist-08-26">Bambi - Black Mist</a></p>
+  <p><a href="https://telegra.ph/DJAWA-BamBi---Akanes-Hidden-Heart-08-26">[DJAWA] BamBi - Akane's Hidden Heart</a></p>
+  <p><a href="https://telegra.ph/BLUECAKE-Bambi---Present-for-u-2-08-26">Bambi - Present for u 2</a></p>
+  <p><a href="https://telegra.ph/BLUECAKE-Bambi---Present-for-u-08-26">Bambi - Present for u</a></p>
+
 </body>
 </html>
