--- a/福利姬频道总目录/Cherry樱桃酱全集/menu.html
+++ b/福利姬频道总目录/Cherry樱桃酱全集/menu.html
@@ -10,6 +10,23 @@
   </div>
   <hr>
   <p><a href="https://telegra.ph/Cherry樱桃酱651P626MB-08-26">Cherry樱桃酱[65+1P／626MB]</a></p>
- 
+  <p><a href="https://telegra.ph/ISHOW爱秀-NO027-樱桃Cherry-08-26">[ISHOW爱秀] NO.027 樱桃Cherry</a></p>
+  <p><a href="https://telegra.ph/ISHOW爱秀-NO036-樱桃Cherry丝袜诱惑-08-26">[ISHOW爱秀] NO.036 樱桃Cherry《丝袜诱惑》</a></p>
+  <p><a href="https://telegra.ph/ISHOW爱秀-NO079-樱桃Cherry-08-26">[ISHOW爱秀] NO.079 樱桃Cherry</a></p>
+  <p><a href="https://telegra.ph/秀人Xiuren-No5181-Cherry樱桃酱-08-26">[秀人Xiuren] No.5181 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/秀人Xiuren-No5205-Cherry樱桃酱-08-26">[秀人Xiuren] No.5205 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/秀人Xiuren-No5236-Cherry樱桃酱-08-26">[秀人Xiuren] No.5236 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/语画界XIAOYU-Vol819-Cherry樱桃酱-08-26">[语画界XIAOYU] Vol.819 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/语画界XIAOYU-Vol824-Cherry樱桃酱-08-26">[语画界XIAOYU] Vol.824 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/语画界XIAOYU-Vol835-Cherry樱桃酱-08-26">[语画界XIAOYU] Vol.835 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/语画界XIAOYU-Vol840-Cherry樱桃酱-08-26">[语画界XIAOYU] Vol.840 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/语画界XIAOYU-Vol854-Cherry樱桃酱-08-26">[语画界XIAOYU] Vol.854 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/语画界XIAOYU-Vol860-Cherry樱桃酱-08-26">[语画界XIAOYU] Vol.860 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/语画界XIAOYU-Vol885-樱桃酱-08-26">[语画界XIAOYU] Vol.885 樱桃酱</a></p>
+  <p><a href="https://telegra.ph/爱秀ISHOW-No342-樱桃Cherry-08-26">[爱秀ISHOW] No.342 樱桃Cherry</a></p>
+  <p><a href="https://telegra.ph/爱秀ISHOW-No310-樱桃Cherry-08-26">[爱秀ISHOW] No.310 樱桃Cherry</a></p>
+  <p><a href="https://telegra.ph/秀人XiuRen-No4724-Cherry樱桃酱-08-26">[秀人XiuRen] No.4724 Cherry樱桃酱</a></p>
+  <p><a href="https://telegra.ph/语画界XIAOYU-Vol742-Cherry樱桃酱-08-26">[语画界XIAOYU] Vol.742 Cherry樱桃酱</a></p>
+
 </body>
 </html>
