--- a/福利姬频道总目录/byoru全集/menu.html
+++ b/福利姬频道总目录/byoru全集/menu.html
@@ -103,6 +103,68 @@
   <p><a href="https://telegra.ph/Byoru---NO55-Mitsuri-Kanroji-23P-50MB-08-26">Byoru - NO.55 Mitsuri Kanroji [23P-50MB]</a></p>
   <p><a href="https://telegra.ph/Byoru---Marin-Kitagawa-Bikini-08-26">Byoru - Marin Kitagawa Bikini</a></p>
   <p><a href="https://telegra.ph/Byoru---Lollipops-60P-15V-08-26">Byoru - Lollipops 60P 15V</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉-Byoru---Anubis-阿努比斯-08-26"> Byoru - Anubis 阿努比斯</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉-Byoru---Bastet-巴斯泰托女神-08-26"> Byoru - Bastet 巴斯泰托女神</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉-Byoru---Cyberpunk-Edgerunners-08-26"> Byoru - Cyberpunk Edgerunners</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Chun-Li-08-26">Byoru - Chun-Li</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Bocchi-the-rock-08-26">Byoru - Bocchi the rock</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Viper-NIKKE-08-26">Byoru - Viper NIKKE</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Viper-NIKKE-08-26-2">Byoru - Viper (NIKKE)</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---2B-Cybunny-08-26">Byoru - 2B Cybunny</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Boa-Hancock-08-26">Byoru - Boa Hancock</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Honoka-Altermis-DoA-08-26">Byoru - Honoka Altermis (DoA)</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Leifang-Mooncake-08-26">Byoru - Leifang Mooncake</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Jett-Valorant---Jett-phoneset-08-26">Byoru - Jett Valorant - Jett phoneset</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Maid-Raiden-08-26">Byoru - Maid Raiden</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Maid-Mask-08-26">Byoru - Maid Mask</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Mashu-Kirielight-bikini-H-08-26">Byoru - Mashu Kirielight bikini-H</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Mashu-Kirielight-bikini---S-08-26">Byoru - Mashu Kirielight bikini - S</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Natigaru-Dark-Elf-08-26">Byoru - Natigaru Dark Elf</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Nico-Robin-phoneset-08-26">Byoru - Nico Robin phoneset</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Nyanko-Kawaii-Nekomimi-08-26">Byoru - Nyanko Kawaii Nekomimi</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Quiet-phoneset-08-26">Byoru - Quiet phoneset</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Pink-Cymeow-08-26">Byoru - Pink Cymeow</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Rangiku-phoneset-08-26">Byoru - Rangiku phoneset</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Samsung-Sam-08-26">Byoru - Samsung Sam</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Rapi-08-26">Byoru - Rapi</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Vermeil-08-26">Byoru - Vermeil</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Tiger-08-26">Byoru - Tiger</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Tifa-Lockhart-08-26">Byoru - Tifa Lockhart</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Inori-08-26">Byoru - Inori</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Himeno-08-26">Byoru - Himeno</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Bocchi-the-rock-08-26-2">Byoru - Bocchi the rock</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Inori-Yuzuriha-08-26">Byoru - Inori Yuzuriha</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Rapi-NIKKE-08-26">Byoru - Rapi (NIKKE)</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Rupee-08-26">Byoru - Rupee</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Vermeil-in-Gold-08-26">Byoru - Vermeil in Gold</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Viper-08-26">Byoru - Viper</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Wednesday-08-26">Byoru - Wednesday</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Yoko-08-26">Byoru - Yoko</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Yor-Forger-Red-08-26">Byoru - Yor Forger Red</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---地狱乐-08-26">Byoru - 地狱乐</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Ada-Wong-RE4-remake-08-26">Byoru - Ada Wong RE4 remake</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Barbie-08-26">Byoru - Barbie</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Alice-08-26">Byoru - Alice</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Cammy-White-08-26">Byoru - Cammy White</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Cammy-08-26">Byoru - Cammy</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Dehya-08-26">Byoru - Dehya</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Jackal-NIKKE-08-26">Byoru - Jackal (NIKKE)</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Hinata-Akatsuki-08-26">Byoru - Hinata Akatsuki</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Guitar-sister-08-26">Byoru - Guitar sister</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Marin-Red-08-26">Byoru - Marin Red</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Lucy-08-26">Byoru - Lucy</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Jalter-Dangerous-Beast-08-26">Byoru - Jalter Dangerous Beast</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Power-ringfit-08-26">Byoru - Power ringfit</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Mitsuri-08-26">Byoru - Mitsuri</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Yoko-Littner-08-26">Byoru - Yoko Littner</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Helm-08-26">Byoru - Helm</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Jeanne-DArc-08-26">Byoru - Jeanne D'Arc</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Liliel-08-26">Byoru - Liliel</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Lucy-08-26-2">Byoru - Lucy</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Mikasa-08-26">Byoru - Mikasa</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Nyotengu-08-26">Byoru - Nyotengu</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---Rangiku-Matsumoto-08-26">Byoru - Rangiku Matsumoto</a></p>
+  <p><a href="https://telegra.ph/日本性感萝莉Byoru---吉他妹妹-08-26">Byoru - 吉他妹妹</a></p>
 
 </body>
 </html>
