--- a/advertise.html
+++ b/advertise.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
 </head>
 <body>
+  <p><a href="https://erik7761269084-arch.github.io/-/index.html" target="_blank" style="color:red;font-weight:bold;">全部频道总页面</a></p>
   <p><a href="https://t.me/yunvfuliji" target="_blank" style="color:red;font-weight:bold;">玉女宫福利姬频道←点击关注</a></p>
   <p><a href="https://t.me/yunvfuliji" target="_blank" style="color:red;font-weight:bold;">玉女宫漫画频道←点击关注</a></p>
+  
+  
+  
 </body>
 </html>
