--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
   <title>频道资源首页</title>
+  <!-- 引入外部样式 -->
+  <link rel="stylesheet" href="advertiseStyle.css">
 </head>
 <body>
   <h1>频道链接大全</h1>
+
   <div id="advertise">
-    <iframe src="advertise.html" frameborder="0" width="100%" height="100"></iframe>
+    <object data="advertise.html" type="text/html"></object>
   </div>
+
   <hr>
   <h2>频道目录首页</h2>
   <p><a href="./漫画(彩色)频道总目录/index.html">漫画(彩色)频道总目录</a></p> 
