--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>频道资源首页</title>
   <!-- 引入外部样式 -->
   <link rel="stylesheet" href="advertiseStyle.css">
