--- a/福利姬频道总目录/ArtGravia全集/menu.html
+++ b/福利姬频道总目录/ArtGravia全集/menu.html
@@ -1,13 +1,20 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../../advertiseStyle.css">
+  <title></title>
 </head>
 <body>
+  <h1 id="page-title"></h1>
+
+  <!-- 广告模块 -->
   <div id="advertise">
-    <iframe src="../../advertise.html" frameborder="0" width="100%" height="100"></iframe>
-    <p><a href="../index.html">返回当前频道总目录</a></p>
+    <object data="../../advertise.html" type="text/html"></object>
+    <p><a class="back-link" href="../index.html">← 返回当前频道总目录</a></p>
   </div>
+
   <hr>
   <p><a href="https://telegra.ph/ARTGRAVIA-VOL072-夏美酱-08-26">[ARTGRAVIA] VOL.072 夏美酱</a></p>
   <p><a href="https://telegra.ph/ARTGRAVIA-VOL135-PIA-08-26">[ARTGRAVIA] VOL.135 PIA</a></p>
