--- a/福利姬频道总目录/ArtGravia全集/menu.html
+++ b/福利姬频道总目录/ArtGravia全集/menu.html
@@ -16,6 +16,17 @@
   </div>
 
   <hr>
+  <script>
+    // 获取当前路径
+    let pathParts = window.location.pathname.split("/").filter(p => p !== "");
+    // 取倒数第二个部分作为目录名
+    let folderName = decodeURIComponent(pathParts[pathParts.length - 2]);
+
+    // 设置标题
+    document.getElementById("page-title").innerText = folderName + " 资源目录";
+    document.title = folderName; // 同时修改网页标签标题
+  </script>
+
   <p><a href="https://telegra.ph/ARTGRAVIA-VOL072-夏美酱-08-26">[ARTGRAVIA] VOL.072 夏美酱</a></p>
   <p><a href="https://telegra.ph/ARTGRAVIA-VOL135-PIA-08-26">[ARTGRAVIA] VOL.135 PIA</a></p>
   <p><a href="https://telegra.ph/ARTGRAVIA-VOL174-SeA-08-26">[ARTGRAVIA] VOL.174 SeA</a></p>
