--- a/福利姬频道总目录/Arty亚缇全集/menu.html
+++ b/福利姬频道总目录/Arty亚缇全集/menu.html
@@ -1,14 +1,33 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../../advertiseStyle.css">
+  <title></title>
 </head>
 <body>
+  <h1 id="page-title"></h1>
+
+  <!-- 广告模块 -->
   <div id="advertise">
-    <iframe src="../../advertise.html" frameborder="0" width="100%" height="100"></iframe>
-	<p><a href="../index.html">返回当前频道总目录</a></p>
+    <object data="../../advertise.html" type="text/html"></object>
+    <p><a class="back-link" href="../index.html">← 返回当前频道总目录</a></p>
   </div>
+
   <hr>
+  <script>
+    // 获取当前路径
+    let pathParts = window.location.pathname.split("/").filter(p => p !== "");
+    // 取倒数第二个部分作为目录名
+    let folderName = decodeURIComponent(pathParts[pathParts.length - 2]);
+
+    // 设置标题
+    document.getElementById("page-title").innerText = folderName + " 资源目录";
+    document.title = folderName; // 同时修改网页标签标题
+  </script>
+
+
   <p><a href="https://telegra.ph/Arty亚缇-2203Tier1-08-26">Arty亚缇 22.03Tier.1</a></p>
   <p><a href="https://telegra.ph/Arty亚缇-2203Tier2-08-26">Arty亚缇 22.03Tier.2</a></p>
   <p><a href="https://telegra.ph/Arty亚缇---NO16-RE从零开始的异世界生活-艾尔莎葛兰西尔特猎肠者-52P-127MB-08-26">Arty亚缇 - NO.16 RE：从零开始的异世界生活 艾尔莎·葛兰西尔特(猎肠者) [52P-127MB]</a></p>
