--- a/福利姬频道总目录/index.html
+++ b/福利姬频道总目录/index.html
@@ -1,15 +1,33 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>chunmomo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../advertiseStyle.css">
+  <title></title>
 </head>
 <body>
-  <h1>频道大全</h1>
+  <h1 id="page-title"></h1>
+
+  <!-- 广告模块 -->
   <div id="advertise">
-    <iframe src="../advertise.html" frameborder="0" width="100%" height="100"></iframe>
+    <object data="../advertise.html" type="text/html"></object>
+    <p><a class="back-link" href="../index.html">← 返回当前频道总目录</a></p>
   </div>
+
   <hr>
+  <script>
+    // 获取当前路径
+    let pathParts = window.location.pathname.split("/").filter(p => p !== "");
+    // 取倒数第二个部分作为目录名
+    let folderName = decodeURIComponent(pathParts[pathParts.length - 2]);
+
+    // 设置标题
+    document.getElementById("page-title").innerText = folderName + " 资源目录";
+    document.title = folderName; // 同时修改网页标签标题
+  </script>
+
+
   <h2>福利姬目录</h2>
   <p><a href="./ArtGravia全集/menu.html">ArtGravia全集</a></p> 
   <p><a href="./Arty亚缇全集/menu.html">Arty亚缇全集</a></p> 
