--- a/福利姬频道总目录/index.html
+++ b/福利姬频道总目录/index.html
@@ -10,6 +10,7 @@
   <h1 id="page-title"></h1>
   <div id="advertise">
     <object data="../advertise.html" type="text/html"></object>
+    <p><a class="back-link" href="../index.html">← 返回所有频道总目录</a></p>
   </div>
   <hr>
   <script>
