--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../advertiseStyle.css">
-  <title></title>
+  <link rel="stylesheet" href="advertiseStyle.css">
 </head>
 <body>
   <h1 id="page-title"></h1>
   <div id="advertise">
-    <object data="../advertise.html" type="text/html"></object>
-    <p><a class="back-link" href="../index.html">← 返回所有频道总目录</a></p>
+    <object data="advertise.html" type="text/html"></object>
   </div>
   <hr>
   <script>
